--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Christopher Adams",
   "license": "GPL-3.0-or-later",
   "devDependencies": {
+    "smartweave": "^0.4.29",
     "snowpack": "^3.3.0",
     "testweave-sdk": "^0.2.2"
   },
