--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "Christopher Adams",
   "license": "GPL-3.0-or-later",
   "devDependencies": {
+    "chai": "^4.3.4",
+    "esm": "^3.2.25",
+    "mocha": "^8.3.2",
     "smartweave": "^0.4.29",
     "smartweave-testing": "^0.2.0",
     "snowpack": "^3.3.0",
