--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "arweave": "^1.10.13",
+    "normalize.css": "^8.0.1",
     "smartweave": "^0.4.29",
     "util": "^0.12.3"
   }
