Add eslint package

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "license": "GPL-3.0-or-later",
   "devDependencies": {
     "chai": "^4.3.4",
+    "eslint": "^7.24.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
     "esm": "^3.2.25",
     "mocha": "^8.3.2",
     "smartweave-testing": "^0.2.0",
