--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mocha": "^8.3.2",
     "smartweave-testing": "^0.2.0",
     "snowpack": "^3.3.0",
+    "standard": "^16.0.3",
     "testweave-sdk": "^0.2.2"
   },
   "dependencies": {
