Add webpack to build JS

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "devDependencies": {
     "@snowpack/plugin-dotenv": "^2.1.0",
+    "@snowpack/plugin-webpack": "^2.3.1",
     "esm": "^3.2.25",
     "mocha": "^8.3.2",
     "smartweave-testing": "^0.2.0",
