--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "license": "MIT",
   "devDependencies": {
     "@snowpack/plugin-dotenv": "^2.1.0",
+    "@snowpack/plugin-postcss": "^1.2.2",
     "@snowpack/plugin-webpack": "^2.3.1",
+    "cssnano": "^4.1.11",
     "esm": "^3.2.25",
     "mocha": "^8.3.2",
+    "postcss": "^7.0.35",
+    "postcss-preset-env": "^6.7.0",
     "smartweave-testing": "^0.2.0",
     "snowpack": "^3.3.0",
     "standard": "^16.0.3",
