--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@snowpack/plugin-dotenv": "^2.1.0",
     "@snowpack/plugin-postcss": "^1.2.2",
     "@snowpack/plugin-webpack": "^2.3.1",
+    "arweave-deploy": "^1.9.1",
     "cssnano": "^4.1.11",
     "esm": "^3.2.25",
     "mocha": "^8.3.2",
