Add deploy command

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "create": "smartweave create contracts/is-art.js contracts/is-art.json",
+    "deploy": "arweave deploy build/index.html --package",
     "build": "snowpack build --polyfill-node",
     "package": "arweave package build/index.html dist/index.html",
     "start": "snowpack dev",
