--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Is Art for Arweave",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "standard && mocha --require esm"
   },
   "author": "Christopher Adams",
   "license": "MIT",
